// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScoreMeter > clamps above 100 1`] = `
<div>
  <div
    class="relative inline-flex items-center justify-center"
    style="width: 44px; height: 44px;"
  >
    <svg
      class="-rotate-[135deg]"
      height="44"
      width="44"
    >
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--hairline))"
        stroke-dasharray="96.60397409788612 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
      />
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--success))"
        stroke-dasharray="96.60397409788612 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
        style="transition: stroke-dasharray 400ms var(--ease-out-soft);"
      />
    </svg>
  </div>
</div>
`;

exports[`ScoreMeter > renders accent band 1`] = `
<div>
  <div
    class="relative inline-flex items-center justify-center"
    style="width: 44px; height: 44px;"
  >
    <svg
      class="-rotate-[135deg]"
      height="44"
      width="44"
    >
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--hairline))"
        stroke-dasharray="96.60397409788612 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
      />
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--accent))"
        stroke-dasharray="69.554861350478 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
        style="transition: stroke-dasharray 400ms var(--ease-out-soft);"
      />
    </svg>
    <div
      class="absolute inset-0 flex flex-col items-center justify-center"
    >
      <span
        class="font-metric text-ink text-[0.8125rem] leading-none"
      >
        72
      </span>
    </div>
  </div>
</div>
`;

exports[`ScoreMeter > renders cold band (value < 30) 1`] = `
<div>
  <div
    class="relative inline-flex items-center justify-center"
    style="width: 44px; height: 44px;"
  >
    <svg
      class="-rotate-[135deg]"
      height="44"
      width="44"
    >
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--hairline))"
        stroke-dasharray="96.60397409788612 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
      />
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--ink-dim))"
        stroke-dasharray="17.3887153376195 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
        style="transition: stroke-dasharray 400ms var(--ease-out-soft);"
      />
    </svg>
    <div
      class="absolute inset-0 flex flex-col items-center justify-center"
    >
      <span
        class="font-metric text-ink text-[0.8125rem] leading-none"
      >
        18
      </span>
    </div>
  </div>
</div>
`;

exports[`ScoreMeter > renders hot band (>=85) 1`] = `
<div>
  <div
    class="relative inline-flex items-center justify-center"
    style="width: 44px; height: 44px;"
  >
    <svg
      class="-rotate-[135deg]"
      height="44"
      width="44"
    >
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--hairline))"
        stroke-dasharray="96.60397409788612 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
      />
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--success))"
        stroke-dasharray="87.90961642907638 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
        style="transition: stroke-dasharray 400ms var(--ease-out-soft);"
      />
    </svg>
    <div
      class="absolute inset-0 flex flex-col items-center justify-center"
    >
      <span
        class="font-metric text-ink text-[0.8125rem] leading-none"
      >
        91
      </span>
    </div>
  </div>
</div>
`;

exports[`ScoreMeter > renders warm band 1`] = `
<div>
  <div
    class="relative inline-flex items-center justify-center"
    style="width: 44px; height: 44px;"
  >
    <svg
      class="-rotate-[135deg]"
      height="44"
      width="44"
    >
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--hairline))"
        stroke-dasharray="96.60397409788612 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
      />
      <circle
        cx="22"
        cy="22"
        fill="none"
        r="20.5"
        stroke="hsl(var(--warning))"
        stroke-dasharray="53.13218575383737 128.8052987971815"
        stroke-linecap="round"
        stroke-width="3"
        style="transition: stroke-dasharray 400ms var(--ease-out-soft);"
      />
    </svg>
    <div
      class="absolute inset-0 flex flex-col items-center justify-center"
    >
      <span
        class="font-metric text-ink text-[0.8125rem] leading-none"
      >
        55
      </span>
    </div>
  </div>
</div>
`;
